--- a/my_django_app/requirements.txt
+++ b/my_django_app/requirements.txt
@@ -1,2 +1,25 @@
+asgiref==3.3.1
+astroid==2.4.2
+brew==0.1.3
+cffi==1.14.5
+colorama==0.4.4
+cryptography==3.4.6
 Django==3.1.7
+excel==1.0.0
+isort==5.7.0
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+mysql==0.0.2
+numpy==1.20.1
+opencv-python==4.5.1.48
+Pillow==8.1.2
+pycparser==2.20
+pylint==2.6.0
 PyMySQL==1.0.2
+pytz==2021.1
+qrcode==6.1
+six==1.15.0
+sqlparse==0.4.1
+toml==0.10.2
+wrapt==1.12.1
+xlrd==2.0.1
