--- a/my_django_app/requirements.txt
+++ b/my_django_app/requirements.txt
@@ -5,11 +5,17 @@ cffi==1.14.5
 colorama==0.4.4
 cryptography==3.4.6
 Django==3.1.7
+django-auth-remember==0.3
+django-credit-cards==0.4.1
+django-crispy-forms==1.11.0
+django-serverside-datatable==0.1.1
+django-tagify==0.20
 excel==1.0.0
 isort==5.7.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 mysql==0.0.2
+mysqlclient==2.0.3
 numpy==1.20.1
 opencv-python==4.5.1.48
 Pillow==8.1.2
@@ -18,6 +24,7 @@ pylint==2.6.0
 PyMySQL==1.0.2
 pytz==2021.1
 qrcode==6.1
+reportlab==3.5.67
 six==1.15.0
 sqlparse==0.4.1
 toml==0.10.2
